samples/_failures_safe/1761366280_43fbc8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_21c18477.c: In function ‘main’:
./samples/SAFE/__tmp_21c18477.c:140:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  140 |     size_t compressed_size
      |     ^~~~~~
./samples/SAFE/__tmp_21c18477.c:140:5: error: expected declaration or statement at end of input
